# Aptos34

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Cargo.toml  SECURITY.md  benchmark_api.sh  rustfmt.toml
.github/: mergify.yml
.github/ts-tasks/: emit-github-workflow-metrics.ts  package.json  pnpm-lock.yaml
.github/workflows/: cli-release.yaml  copy-images-to-dockerhub-nightly.yaml  docker-build-test.yaml  docker-rust-build.yaml  forge-specialized.yaml  forge-stable.yaml  forge-unstable.yaml  lint-test.yaml  windows.yaml
api/: Cargo.toml
api/openapi-spec-generator/: Cargo.toml
api/src/: accounts.rs  basic.rs  blocks.rs  context.rs  db_with_cache.rs  events.rs  index.rs  lib.rs  log.rs  page.rs  response.rs  runtime.rs  state.rs  transactions.rs  view_function.rs
api/test-context/: Cargo.toml
api/types/: Cargo.toml
aptos-move/aptos-aggregator/: Cargo.toml
aptos-move/aptos-debugger/: Cargo.toml
aptos-move/aptos-debugger/src/: lib.rs  main.rs
aptos-move/aptos-gas/: Cargo.toml
aptos-move/aptos-release-builder/: Cargo.toml
aptos-move/aptos-resource-viewer/: Cargo.toml
aptos-move/aptos-resource-viewer/src/: lib.rs
aptos-move/aptos-sdk-builder/: Cargo.toml
aptos-move/aptos-transaction-benchmarks/: Cargo.toml
aptos-move/aptos-transactional-test-harness/: Cargo.toml
aptos-move/aptos-validator-interface/: Cargo.toml
aptos-move/aptos-vm/: Cargo.toml
aptos-move/block-executor/: Cargo.toml
aptos-move/e2e-move-tests/: Cargo.toml
aptos-move/e2e-tests/: Cargo.toml
aptos-move/e2e-testsuite/: Cargo.toml
aptos-move/framework/: Cargo.toml
aptos-move/gas-algebra-ext/: Cargo.toml
aptos-move/gas-algebra-ext/src/: lib.rs
aptos-move/move-examples/: Cargo.toml
aptos-move/mvhashmap/: Cargo.toml
aptos-move/package-builder/: Cargo.toml
aptos-move/vm-genesis/: Cargo.toml
aptos-move/writeset-transaction-generator/: Cargo.toml
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs  network.rs  services.rs  state_sync.rs  storage.rs  utils.rs
config/: Cargo.toml
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/src/: generator.rs  keys.rs  network_id.rs  utils.rs
consensus/: Cargo.toml
consensus/consensus-types/: Cargo.toml
consensus/safety-rules/: Cargo.toml
consensus/src/: consensus_provider.rs  counters.rs  epoch_manager.rs  lib.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  payload_client.rs  payload_manager.rs  pending_votes.rs  persistent_liveness_storage.rs  recovery_manager.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  sender_aware_shuffler.rs  state_computer.rs  state_replication.rs  transaction_shuffler.rs  txn_notifier.rs
crates/aptos-api/entrypoint/: Cargo.toml
crates/aptos-api/entrypoint/src/: lib.rs
crates/aptos-api/v1/: Cargo.toml
crates/aptos-api/v1/src/: config.rs  routes.rs
crates/aptos-bitvec/: Cargo.toml
crates/aptos-build-info/: Cargo.toml
crates/aptos-build-info/src/: lib.rs
crates/aptos-compression/: Cargo.toml
crates/aptos-crypto/: Cargo.toml
crates/aptos-crypto-derive/: Cargo.toml
crates/aptos-faucet/: Cargo.toml
crates/aptos-faucet-cli/: Cargo.toml
crates/aptos-genesis/: Cargo.toml
crates/aptos-id-generator/: Cargo.toml
crates/aptos-id-generator/src/: lib.rs
crates/aptos-infallible/: Cargo.toml
crates/aptos-infallible/src/: math.rs  nonzero.rs  time.rs
crates/aptos-keygen/: Cargo.toml
crates/aptos-keygen/src/: lib.rs
crates/aptos-log-derive/: Cargo.toml
crates/aptos-logger/: Cargo.toml
crates/aptos-metrics-core/: Cargo.toml
crates/aptos-metrics-core/src/: op_counters.rs
crates/aptos-move-graphql/values/: Cargo.toml
crates/aptos-move-graphql/values/src/: lib.rs
crates/aptos-network-checker/: Cargo.toml
crates/aptos-node-api/v2/: Cargo.toml
crates/aptos-node-api/v2/src/: config.rs  lib.rs  modules.rs  resources.rs  routes.rs  schema.rs
crates/aptos-openapi/: Cargo.toml
crates/aptos-proptest-helpers/: Cargo.toml
crates/aptos-proptest-helpers/src/: growing_subset.rs  lib.rs  repeat_vec.rs  value_generator.rs
crates/aptos-proptest-helpers/src/unit_tests/: repeat_vec_tests.rs
crates/aptos-protos/: Cargo.toml  buf.gen.yaml
crates/aptos-push-metrics/: Cargo.toml
crates/aptos-rate-limiter/: Cargo.toml
crates/aptos-rest-client/: Cargo.toml
crates/aptos-retrier/: Cargo.toml
crates/aptos-rosetta/: Cargo.toml
crates/aptos-rosetta-cli/: Cargo.toml
crates/aptos-telemetry/: Cargo.toml
crates/aptos-telemetry-service/: Cargo.toml
crates/aptos-temppath/: Cargo.toml
crates/aptos-temppath/src/: lib.rs
crates/aptos-time-service/: Cargo.toml
crates/bounded-executor/: Cargo.toml
crates/bounded-executor/src/: lib.rs
crates/crash-handler/: Cargo.toml
crates/crash-handler/src/: lib.rs
crates/fallible/: Cargo.toml
crates/node-resource-metrics/: Cargo.toml
crates/node-resource-metrics/src/collectors/: common.rs  linux_collectors.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
crates/short-hex-str/: Cargo.toml
crates/short-hex-str/src/: lib.rs
developer-docs-site/: docusaurus.config.js  sidebars.js
docker/: docker-bake-rust-all.hcl  docker-bake-rust-all.sh  rust-all.Dockerfile
mempool/: Cargo.toml
network/: Cargo.toml
network/memsocket/: Cargo.toml
network/memsocket/src/: lib.rs
scripts/: cross-build-binary.sh  dev_setup.sh  rust_lint.sh  windows_dev_setup.ps1
sdk/: Cargo.toml
sdk/src/: lib.rs  (+2 more)
state-sync/inter-component/consensus-notifications/: Cargo.toml
state-sync/inter-component/consensus-notifications/src/: lib.rs
state-sync/storage-service/types/: Cargo.toml
state-sync/storage-service/types/src/: lib.rs  requests.rs  responses.rs  tests.rs
storage/fast-syncing-db/: Cargo.toml
storage/fast-syncing-db/src/: lib.rs
testsuite/: exp  forge.py  forge_test.py  indexer_grpc_local.py  parallel_execution_performance.py  single_node_performance.py
testsuite/dos/http_test/: Cargo.toml
testsuite/dos/listener/: Cargo.toml
testsuite/dos/listener/src/: main.rs
types/: Cargo.toml
vm-validator/: Cargo.toml
(+1220 files in other folders)
