[workspace]
resolver = "2"

members = [
    "api",
    "api/openapi-spec-generator",
    "api/test-context",
    "api/types",
    "aptos-move/aptos-aggregator",
    "aptos-move/aptos-debugger",
    "aptos-move/aptos-gas",
    "aptos-move/aptos-release-builder",
    "aptos-move/aptos-resource-viewer",
    "aptos-move/aptos-sdk-builder",
    "aptos-move/aptos-transaction-benchmarks",
    "aptos-move/aptos-transactional-test-harness",
    "aptos-move/aptos-validator-interface",
    "aptos-move/aptos-vm",
    "aptos-move/block-executor",
    "aptos-move/e2e-move-tests",
    "aptos-move/e2e-tests",
    "aptos-move/e2e-testsuite",
    "aptos-move/framework",
    "aptos-move/framework/cached-packages",
    "aptos-move/gas-algebra-ext",
    "aptos-move/move-examples",
    "aptos-move/mvhashmap",
    "aptos-move/package-builder",
    "aptos-move/vm-genesis",
    "aptos-move/writeset-transaction-generator",
    "aptos-node",
    "config",
    "config/global-constants",
    "consensus",
    "consensus/consensus-types",
    "consensus/safety-rules",
    "crates/aptos",
    "crates/aptos-bitvec",
    "crates/aptos-build-info",
    "crates/aptos-compression",
    "crates/aptos-crypto",
    "crates/aptos-crypto-derive",
    "crates/aptos-faucet",
    "crates/aptos-faucet-cli",
    "crates/aptos-genesis",
    "crates/aptos-id-generator",
    "crates/aptos-infallible",
    "crates/aptos-keygen",
    "crates/aptos-log-derive",
    "crates/aptos-logger",
    "crates/aptos-metrics-core",
    "crates/aptos-network-checker",
    "crates/aptos-openapi",
    "crates/aptos-proptest-helpers",
    "crates/aptos-rate-limiter",
    "crates/aptos-rest-client",
    "crates/aptos-retrier",
    "crates/aptos-rosetta",
    "crates/aptos-rosetta-cli",
    "crates/aptos-telemetry",
    "crates/aptos-telemetry-service",
    "crates/aptos-temppath",
    "crates/aptos-time-service",
    "crates/aptos-warp-webserver",
    "crates/bounded-executor",
    "crates/channel",
    "crates/crash-handler",
    "crates/fallible",
    "crates/indexer",
    "crates/inspection-service",
    "crates/node-resource-metrics",
    "crates/num-variants",
    "crates/proxy",
    "crates/short-hex-str",
    "crates/transaction-emitter",
    "crates/transaction-emitter-lib",
    "ecosystem/node-checker",
    "ecosystem/node-checker/fn-check-client",
    "execution/db-bootstrapper",
    "execution/executor",
    "execution/executor-benchmark",
    "execution/executor-test-helpers",
    "execution/executor-types",
    "mempool",
    "network",
    "network/builder",
    "network/discovery",
    "network/memsocket",
    "network/netcore",
    "network/peer-monitoring-service/client",
    "network/peer-monitoring-service/server",
    "network/peer-monitoring-service/types",
    "sdk",
    "secure/net",
    "secure/storage",
    "secure/storage/github",
    "secure/storage/vault",
    "state-sync/aptos-data-client",
    "state-sync/inter-component/consensus-notifications",
    "state-sync/inter-component/event-notifications",
    "state-sync/inter-component/mempool-notifications",
    "state-sync/state-sync-v2/data-streaming-service",
    "state-sync/state-sync-v2/state-sync-driver",
    "state-sync/storage-service/client",
    "state-sync/storage-service/server",
    "state-sync/storage-service/types",
    "storage/accumulator",
    "storage/aptosdb",
    "storage/backup/backup-cli",
    "storage/backup/backup-service",
    "storage/indexer",
    "storage/jellyfish-merkle",
    "storage/rocksdb-options",
    "storage/schemadb",
    "storage/scratchpad",
    "storage/state-view",
    "storage/storage-interface",
    "testsuite/aptos-fuzzer",
    "testsuite/aptos-fuzzer/fuzz",
    "testsuite/dos/http_test",
    "testsuite/dos/listener",
    "testsuite/dos/sender",
    "testsuite/forge",
    "testsuite/forge-cli",
    "testsuite/generate-format",
    "testsuite/smoke-test",
    "testsuite/testcases",
    "types",
    "vm-validator",
]

exclude = ["crates/aptos-protos"]

# NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "aptos-node",
    "consensus/safety-rules",
    "crates/aptos",
    "crates/aptos-faucet",
    "crates/aptos-keygen",
    "crates/aptos-rate-limiter",
    "crates/aptos-rosetta",
    "crates/transaction-emitter",
    "aptos-move/framework",
    "execution/db-bootstrapper",
    "storage/backup/backup-cli",
    "ecosystem/node-checker",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = true
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.64"
version = "0.3.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aptos = { path = "crates/aptos", version = "0.3.0" }
aptos-accumulator = { path = "storage/accumulator", version = "0.3.0" }
aptos-aggregator = { path = "aptos-move/aptos-aggregator", version = "0.3.0" }
aptos-api = { path = "api", version = "0.3.0" }
aptos-api-test-context = { path = "api/test-context", version = "0.3.0" }
aptos-api-types = { path = "api/types", version = "0.3.0" }
aptos-backup-cli = { path = "storage/backup/backup-cli", version = "0.3.0" }
aptos-backup-service = { path = "storage/backup/backup-service", version = "0.3.0" }
aptos-bounded-executor = { path = "crates/bounded-executor", version = "0.3.0" }
aptos-block-executor = { path = "aptos-move/block-executor", version = "0.3.0" }
aptos-bitvec = { path = "crates/aptos-bitvec", version = "0.3.0" }
aptos-build-info = { path = "crates/aptos-build-info", version = "0.3.0" }
aptos-cached-packages = { path = "aptos-move/framework/cached-packages", version = "0.3.0" }
aptos-channels = { path = "crates/channel", version = "0.3.0" }
aptos-compression = { path = "crates/aptos-compression", version = "0.3.0" }
aptos-consensus = { path = "consensus", version = "0.3.0" }
aptos-consensus-notifications = { path = "state-sync/inter-component/consensus-notifications", version = "0.3.0" }
aptos-consensus-types = { path = "consensus/consensus-types", version = "0.3.0" }
aptos-config = { path = "config", version = "0.3.0" }
aptos-crash-handler = { path = "crates/crash-handler", version = "0.3.0" }
aptos-crypto = { path = "crates/aptos-crypto", version = "0.3.0" }
aptos-crypto-derive = { path = "crates/aptos-crypto-derive", version = "0.3.0" }
aptos-data-client = { path = "state-sync/aptos-data-client", version = "0.3.0" }
aptos-data-streaming-service = { path = "state-sync/state-sync-v2/data-streaming-service", version = "0.3.0" }
aptos-db = { path = "storage/aptosdb", version = "0.3.0" }
aptos-db-indexer = { path = "storage/indexer", version = "0.3.0" }
aptos-debugger = { path = "aptos-move/aptos-debugger", version = "0.3.0" }
aptos-event-notifications = { path = "state-sync/inter-component/event-notifications", version = "0.3.0" }
aptos-executor = { path = "execution/executor", version = "0.3.0" }
aptos-executor-test-helpers = { path = "execution/executor-test-helpers", version = "0.3.0" }
aptos-executor-types = { path = "execution/executor-types", version = "0.3.0" }
aptos-faucet = { path = "crates/aptos-faucet", version = "0.3.0" }
aptos-fallible = { path = "crates/fallible", version = "0.3.0" }
aptos-forge = { path = "testsuite/forge", version = "0.3.0" }
aptos-framework = { path = "aptos-move/framework", version = "0.3.0" }
aptos-fuzzer = { path = "testsuite/aptos-fuzzer", version = "0.3.0" }
aptos-gas = { path = "aptos-move/aptos-gas", version = "0.3.0" }
aptos-gas-algebra-ext = { path = "aptos-move/gas-algebra-ext", version = "0.3.0" }
aptos-genesis = { path = "crates/aptos-genesis", version = "0.3.0" }
aptos-github-client = { path = "secure/storage/github", version = "0.3.0" }
aptos-global-constants = { path = "config/global-constants", version = "0.3.0" }
aptos-id-generator = { path = "crates/aptos-id-generator", version = "0.3.0" }
aptos-indexer = { path = "crates/indexer", version = "0.3.0" }
aptos-infallible = { path = "crates/aptos-infallible", version = "0.3.0" }
aptos-inspection-service = { path = "crates/inspection-service", version = "0.3.0" }
aptos-jellyfish-merkle = { path = "storage/jellyfish-merkle", version = "0.3.0" }
aptos-keygen = { path = "crates/aptos-keygen", version = "0.3.0" }
aptos-language-e2e-tests = { path = "aptos-move/e2e-tests", version = "0.3.0" }
aptos-log-derive = { path = "crates/aptos-log-derive", version = "0.3.0" }
aptos-logger = { path = "crates/aptos-logger", version = "0.3.0" }
aptos-mempool = { path = "mempool", version = "0.3.0" }
aptos-mempool-notifications = { path = "state-sync/inter-component/mempool-notifications", version = "0.3.0" }
aptos-memsocket = { path = "network/memsocket", version = "0.3.0" }
aptos-metrics-core = { path = "crates/aptos-metrics-core", version = "0.3.0" }
aptos-move-examples = { path = "aptos-move/move-examples", version = "0.3.0" }
aptos-mvhashmap = { path = "aptos-move/mvhashmap", version = "0.3.0" }
aptos-netcore = { path = "network/netcore", version = "0.3.0" }
aptos-network = { path = "network", version = "0.3.0" }
aptos-network-builder = { path = "network/builder", version = "0.3.0" }
aptos-network-checker = { path = "crates/aptos-network-checker", version = "0.3.0" }
aptos-network-discovery = { path = "network/discovery", version = "0.3.0" }
aptos-node = { path = "aptos-node", version = "0.3.0" }
aptos-node-checker = { path = "ecosystem/node-checker", version = "0.3.0" }
aptos-node-resource-metrics = { path = "crates/node-resource-metrics", version = "0.3.0" }
aptos-num-variants = { path = "crates/num-variants", version = "0.3.0" }
aptos-openapi = { path = "crates/aptos-openapi", version = "0.3.0" }
aptos-package-builder = { path = "aptos-move/package-builder", version = "0.3.0" }
aptos-peer-monitoring-service-types = { path = "network/peer-monitoring-service/types", version = "0.3.0" }
aptos-proptest-helpers = { path = "crates/aptos-proptest-helpers", version = "0.3.0" }
aptos-protos = { path = "crates/aptos-protos", version = "0.3.0" }
aptos-proxy = { path = "crates/proxy", version = "0.3.0" }
aptos-push-metrics = { path = "crates/aptos-push-metrics", version = "0.3.0" }
aptos-rate-limiter = { path = "crates/aptos-rate-limiter", version = "0.3.0" }
aptos-release-builder = { path = "aptos-move/aptos-release-builder", version = "0.3.0" }
aptos-resource-viewer = { path = "aptos-move/aptos-resource-viewer", version = "0.3.0" }
aptos-rest-client = { path = "crates/aptos-rest-client", version = "0.3.0" }
aptos-retrier = { path = "crates/aptos-retrier", version = "0.3.0" }
aptos-rocksdb-options = { path = "storage/rocksdb-options", version = "0.3.0" }
aptos-rosetta = { path = "crates/aptos-rosetta", version = "0.3.0" }
aptos-safety-rules = { path = "consensus/safety-rules", version = "0.3.0" }
aptos-schemadb = { path = "storage/schemadb", version = "0.3.0" }
aptos-scratchpad = { path = "storage/scratchpad", version = "0.3.0" }
aptos-sdk = { path = "sdk", version = "0.3.0" }
aptos-sdk-builder = { path = "aptos-move/aptos-sdk-builder", version = "0.3.0" }
aptos-secure-net = { path = "secure/net", version = "0.3.0" }
aptos-secure-storage = { path = "secure/storage", version = "0.3.0" }
aptos-short-hex-str = { path = "crates/short-hex-str", version = "0.3.0" }
aptos-state-sync-driver = { path = "state-sync/state-sync-v2/state-sync-driver", version = "0.3.0" }
aptos-state-view = { path = "storage/state-view", version = "0.3.0" }
aptos-storage-interface = { path = "storage/storage-interface", version = "0.3.0" }
aptos-storage-service-client = { path = "state-sync/storage-service/client", version = "0.3.0" }
aptos-storage-service-types = { path = "state-sync/storage-service/types", version = "0.3.0" }
aptos-storage-service-server = { path = "state-sync/storage-service/server", version = "0.3.0" }
aptos-telemetry = { path = "crates/aptos-telemetry", version = "0.3.0" }
aptos-telemetry-service = { path = "crates/aptos-telemetry-service", version = "0.3.0" }
aptos-temppath = { path = "crates/aptos-temppath", version = "0.3.0" }
aptos-testcases = { path = "testsuite/testcases", version = "0.3.0" }
aptos-time-service = { path = "crates/aptos-time-service", features = ["async"], version = "0.3.0" }
aptos-transaction-emitter-lib = { path = "crates/transaction-emitter-lib", version = "0.3.0" }
aptos-transactional-test-harness = { path = "aptos-move/aptos-transactional-test-harness", version = "0.3.0" }
aptos-types = { path = "types", version = "0.3.0" }
aptos-validator-interface = { path = "aptos-move/aptos-validator-interface", version = "0.3.0" }
aptos-vault-client = { path = "secure/storage/vault", version = "0.3.0" }
aptos-vm = { path = "aptos-move/aptos-vm", version = "0.3.0" }
aptos-vm-genesis = { path = "aptos-move/vm-genesis", version = "0.3.0" }
aptos-vm-validator = { path = "vm-validator", version = "0.3.0" }
aptos-warp-webserver = { path = "crates/aptos-warp-webserver", version = "0.3.0" }
aptos-writeset-generator = { path = "aptos-move/writeset-transaction-generator", version = "0.3.0" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
again = "0.1.2"
anyhow = "1.0.62"
arc-swap = "1.5.0"
arr_macro = "0.1.3"
assert_approx_eq = "1.1.0"
assert_unordered = "0.1.1"
async-stream = "0.3"
async-trait = "0.1.53"
axum = "0.5.16"
base64 = "0.13.0"
backtrace = "0.3.58"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bitvec = "0.19.4"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
blst = "0.3.7"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
cfg-if = "1.0.0"
claims = "0.7"
clap = { version = "3.2.17", features = ["derive", "env", "suggestions"] }
clap_complete = "3.2.3"
codespan-reporting = "0.11.1"
console-subscriber = "0.1.6"
const_format = "0.2.26"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossbeam-queue = "0.3.5"
curve25519-dalek = "3"
dashmap = "5.2.0"
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "4.0.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.8"
env_logger = "0.9.0"
erased-serde = "0.3.13"
event-listener = "2.5.3"
fail = "0.5.0"
field_count = "0.1.1"
flate2 = "1.0.24"
fs_extra = "1.2.0"
futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
futures-channel = "= 0.3.24"
futures-util = "0.3.21"
gcp-bigquery-client = "0.13.0"
get_if_addrs = "0.5.3"
goldenfile = "1.1.0"
handlebars = "4.2.2"
heck = "0.3.2"
hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.15.0"
indoc = "1.0.6"
ipnet = "2.5.0"
itertools = "0.10.3"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
json-patch = "0.2.6"
jsonwebtoken = "8.1"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_15"] }
kube = { version = "0.51.0", features = ["jsonpatch"] }
libfuzzer-sys = "=0.3.2"
libsecp256k1 = "0.7.0"
log = "0.4.17"
lru = "0.7.5"
lz4 = "1.24.0"
maplit = "1.0.2"
mime = "0.3.16"
mirai-annotations = "1.12.0"
mockall = "0.11.0"
more-asserts = "0.3.0"
native-tls = "0.2.10"
num_cpus = "1.13.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
parking_lot = "0.12.0"
paste = "1.0.7"
pbjson = "0.4.0"
percent-encoding = "2.1.0"
pin-project = "1.0.10"
poem = { version = "1.3.40", features = ["anyhow", "rustls"] }
poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
pretty_assertions = "1.2.1"
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.0", default-features = false }
prometheus-http-query = "0.5.2"
# Necessary until this lands: https://github.com/ccakes/prometheus-parse-rs/pull/6.
prometheus-parse = { git = "https://github.com/banool/prometheus-parse-rs", rev = "b65a1f20c5c604a9d2d1e545f70ca51ea8da2354" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.11.3"
prost-types = "0.10.1"
quanta = "0.10.1"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
rayon = "1.5.2"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rocksdb = { version = "0.19.0", features = ["lz4"] }
rstest = "0.15.0"
rusty-fork = "0.3.0"
sha-1 = "0.10.0"
sha2 = "0.9.3"
sha3 = "0.9.1"
siphasher = "0.3.10"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_repr = "0.1"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
smallvec = "1.8.0"
static_assertions = "1.1.0"
stats_alloc = "0.1.8"
strum = "0.24.1"
strum_macros = "0.24.2"
structopt = "0.3.21"
substreams = "0.0.17"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.24.2"
tempfile = "3.3.0"
termcolor = "1.1.2"
textwrap = "0.15.0"
thiserror = "1.0.37"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
trybuild = "1.0.41"
tokio = { version = "1.21.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.8"
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
tonic = { version = "0.8.3", features = ["tls-roots", "transport", "prost", "gzip", "codegen"] }
ureq = { version = "1.5.4", features = ["json", "native-tls"], default_features = false }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
walkdir = "2.3.2"
warp = { version = "0.3.2", features = ["tls"] }
warp-reverse-proxy = "0.5.0"
which = "4.2.5"
x25519-dalek = "1.2.0"

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-cli = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-compiler ={ git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["address32"] }
move-docgen = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-ir-compiler = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-model = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-package = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-prover = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-stackless-bytecode = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-prover-test-utils = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-resource-viewer = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-stackless-bytecode-interpreter = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-symbol-pool = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-transactional-test-runner = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["table-extension"] }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["lazy_natives"] }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
read-write-set = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "81d19fce20d73675b7ac129abe6b6797513cc8d0" }
# END MOVE DEPENDENCIES

[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = true
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true

# This is a temporary workaround to avoid multiple library
# definitions for LZ4 (caused by rust-rocksdb).
# This will be removed once our pull requests land.
# https://github.com/rust-rocksdb/rust-rocksdb/issues/666
[patch.crates-io]
rocksdb = { git = 'https://github.com/aptos-labs/rust-rocksdb' }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
