[package]
name = "aptos-resource-viewer"
description = "Aptos resource viewer"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
