[package]
name = "aptos-global-constants"
description = "Aptos's global constant crate: the source of truth for constant definitions that span multiple crates"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
default = []
testing = []
