[package]
name = "aptos-build-info"
description = "Aptos build information provider"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
