[package]
name = "aptos-keygen"
description = "Command line utility to generate Ed25519 key pairs for testing"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-crypto = { workspace = true }
aptos-types = { workspace = true }
rand = { workspace = true }

