[package]
name = "aptos-metrics-core"
description = "Aptos metrics shortcuts"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
