[package]
name = "aptos-network-checker"
description = "Aptos network checker"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-logger = { workspace = true }
aptos-network = { workspace = true }
aptos-types = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

