[package]
name = "aptos-proptest-helpers"
description = "Aptos proptest helpers"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
crossbeam = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }


