[package]
name = "aptos-retrier"
description = "Generic retry and exponential backoff"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-logger = { workspace = true }
tokio = { workspace = true }

