[package]
name = "aptos-temppath"
description = "Temporary path utilities"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
hex = { workspace = true }
rand = { workspace = true }


