[package]
name = "aptos-bounded-executor"
description = "Executor bounded by number of concurrent tasks"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
