[package]
name = "aptos-crash-handler"
description = "Aptos crash handler"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-logger = { workspace = true }
backtrace = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

