[package]
name = "aptos-node-resource-metrics"
description = "System resource metrics collector"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
cfg-if = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(target_os="linux")'.dependencies]
procfs = { workspace = true }
