[package]
name = "aptos-memsocket"
description = "Aptos memsocket"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
aptos-infallible = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
fuzzing = []
testing = []
