[package]
name = "aptos-move-graphql-values"
description = "Library to convert Move values to GraphQL schema compliant values"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-api = { workspace = true }
aptos-api-types = { workspace = true }
aptos-build-info = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-gas = { workspace = true }
aptos-indexer-grpc-fullnode = { workspace = true }
aptos-logger = { workspace = true }
aptos-mempool = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-protos = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-state-view = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
async-graphql = { workspace = true }
async-graphql-poem = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-resource-viewer = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
pbjson-types = "0.5.1"
poem = { workspace = true }
poem-openapi = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
aptos-framework = { workspace = true }
aptos-move-graphql-test-helpers = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
